<resources>

    <string name="app_name">Event monitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Button strings -->
    <string name="option_one_button">Register new users</string>
    <string name="option_two_button">Register new workshops</string>
    <string name="option_three_button">Show users</string>
    <string name="option_four_button">Show workshops</string>

    <!-- New user labels strings -->
    <string name="new_user_form">Create new user</string>
    <string name="new_user_name">Name:</string>
    <string name="new_user_email">Email:</string>
    <string name="new_user_phone">Phone:</string>
    <string name="new_user_address">Address:</string>
    <string name="new_user_gender">Gender:</string>
    <string name="new_user_workshop_id">Workshop</string>
    <string name="new_user_male">Male</string>
    <string name="new_user_female">Female</string>

    <!-- New workshop labels strings -->
    <string name="new_workshop_form">Create new workshop</string>
    <string name="new_workshop_name">Name:</string>

    <!-- Show workshop labels strings -->
    <string name="show_workshop_form">Show workshop</string>
    <string name="show_workshop_name">Name</string>

    <!-- Shared strings -->
    <string name="back">Back</string>
    <string name="save">Save</string>

</resources>
