<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_workshop_form"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_workshop_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />




    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/back"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:text="@string/back" />

        <Button
            android:id="@+id/save"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.29"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>
